--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,3 @@
 fixtures:
-  symlinks:
-    "backuppc": "#{source_dir}"
-  repositories:
-    "stdlib": "git://github.com/puppetlabs/puppetlabs-stdlib.git"
+  forge_modules:
+    "stdlib": "puppetlabs/stdlib"
