Update to include _core classes

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,3 +1,5 @@
 fixtures:
   forge_modules:
     "stdlib": "puppetlabs/stdlib"
+    "sshkeys_core": "puppetlabs/sshkeys_core"
+    "augeas_core": "puppetlabs/augeas_core"
