Update lint options correctly

--- a/.sync.yml
+++ b/.sync.yml
@@ -21,7 +21,7 @@ spec/spec_helper.rb:
   strict_level: ":warning"
   hiera_config: "hiera.yaml"
 Rakefile:
-  linter_options:
-    - no-140chars-check
+  extra_disabled_lint_checks:
+    - 140chars
   extras: 
   - FastGettext.default_text_domain = 'default-text-domain'
