--- a/.sync.yml
+++ b/.sync.yml
@@ -27,3 +27,12 @@ Gemfile:
   required:
     ':test':
       - gem: coveralls
+      - gem: simplecov
+      - gem: simplecov-console
+      - gem: codecov
+  optional:
+    ':development':
+      - gem: 'github_changelog_generator'
+        git: 'https://github.com/skywinder/github-changelog-generator'
+        ref: '20ee04ba1234e9e83eb2ffb5056e23d641c7a018'
+        condition: "Gem::Version.new(RUBY_VERSION.dup) >= Gem::Version.new('2.2.2')"
