--- a/data/RedHat.yaml
+++ b/data/RedHat.yaml
@@ -2,12 +2,12 @@
 
 backuppc::params::install_directory: '/usr/share/BackupPC'
 backuppc::params::config_directory:  '/etc/BackupPC'
-backuppc::params::cgi_directory:     "%{backuppc::params::install_directory}/sbin"
-backuppc::params::cgi_image_dir:     "%{backuppc::params::install_directory}/html"
+backuppc::params::cgi_directory:     "%{hiera('backuppc::params::install_directory')}/sbin"
+backuppc::params::cgi_image_dir:     "%{hiera('backuppc::params::install_directory')}/html"
 backuppc::params::cgi_image_dir_url: '/BackupPC/images'
 backuppc::params::config_apache:     '/etc/httpd/conf.d/BackupPC.conf'
-backuppc::params::config:            "%{backuppc::params::config_directory}/config.pl"
-backuppc::params::hosts:             "%{backuppc::params::config_directory}/hosts"
+backuppc::params::config:            "%{hiera('backuppc::params::config_directory')}/config.pl"
+backuppc::params::hosts:             "%{hiera('backuppc::params::config_directory')}/hosts"
 backuppc::params::log_directory:     '/var/log/BackupPC'
 backuppc::params::package:           'BackupPC'
 backuppc::params::par_path:
