--- a/.sync.yml
+++ b/.sync.yml
@@ -17,6 +17,7 @@ appveyor.yml:
       on_failure: always # default: always
 spec/spec_helper.rb:
   coverage_report: true
+  mock_with: ':rspec'
   minimum_code_coverage_percentage: 100
   strict_level: ":warning"
   hiera_config: "hiera.yaml"
@@ -29,7 +30,7 @@ Gemfile:
       - gem: coveralls
       - gem: simplecov
       - gem: simplecov-console
-      - gem: codecov
+      - gem: covered
   optional:
     ':development':
       - gem: 'github_changelog_generator'
