Add covered partil summary

--- a/.sync.yml
+++ b/.sync.yml
@@ -10,6 +10,8 @@ appveyor.yml:
     - '.onceover/'
     - '.covered.db'
 .travis.yml:
+  global_env:
+  - COVERAGE=PartialSummary,Coveralls
   notifications:
     email:
       recipients:
