--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ script:
 bundler_args: --without system_tests
 rvm:
   - 2.5.3
+env:
+  global:
+    - COVERAGE=PartialSummary,Coveralls
 stages:
   - static
   - spec
