Create common.pp for params that must be the same for client and server

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,7 +1,7 @@
 ---
 
-backuppc::params::system_account:        'backup'
-backuppc::params::system_home_directory: '/var/backups'
+backuppc::common::system_account:        'backup'
+backuppc::common::system_home_directory: '/var/backups'
 
 lookup_options:
   "^backuppc::(.*)::(.*)$":
